css/styles.css
/*
COLOR PALETTE

#f7fff7 - almost white
#343434 - dark gray - almost black
#2f3061 - blue dark
#ffe66d - yellow
#a1c6d7 - light blue
*/

/* Global Styles
---------------------------------*/
html{
    box-sizing: border-box;
}
*, *:before, *:after{
    box-sizing: inherit;
}
body{
color: #343434;
margin: 0;
padding: 0;
font-family: 'Montserrat', sans-serif;
line-height: 1.5;
}
img{
    width: 300px;
}
a{
    color: #ffe66d;
}
a:hover{
    text-decoration: none;
}
h1{
    font-size: 100px;
    line-height: 1;
}
h2{
    font-size: 45px;
}
h1, h2{
    font-family: 'Caveat', cursive;
    font-weight: 400;
    margin: 0;
}
.content-wrapper{
    max-width: 800px;
    width: 85%;
    margin: 0 auto;
    padding: 60px 0;
}
h3{
    margin-bottom: 0;
}
.item-details h3 + p{
    font-style: italic;
}
.item-details h3 ~ p{
    margin: 0;
}
.divider > section{
    border-bottom: 1px dashed #343434;
    padding: 25px 0;
}
.divider > section:last-of-type{
    border-bottom: none;
}

/* Profile
--------------------------------*/
header{
    background-color: #2f3061;
    color: #f7fff7;
    text-align: center;
}

/* Projects
--------------------------------*/
.projects{
    background: #f7fff7;
}
.projects a{
color: #2f3061;
}
.projects .btn{
    color: #f7fff7;
    background: #2f3061;
    text-decoration: none;
    padding: 8px;
    border-radius: 4px;
    display: inline-block;
}
.projects .btn:hover{
    background: rgba(47, 48, 97, 80%);
}
.project-item{
    overflow: hidden;
}
.project-item img{
float: left;
margin-right: 20px;
}
.project-item h3{
    margin-top: 0;
}

/* Work Experience
--------------------------------*/
.work-experience{
    background: #a1c6d7;
}
.job-item{
    display: grid;
    grid-template-columns: 1fr 2fr;
    column-gap: 20px;
}

/* Education
--------------------------------*/
.education{
    background-image: url(../images/joanna-kosinska-unsplash.jpg);
    background-size: cover;
    background-position: top right;
    padding-bottom: 100px;
}

/* Contact Info
--------------------------------*/
footer{
    background: #343434;
    color: #f7fff7;
    text-align: center;
}
.contact-list{
    list-style-type: none;
    padding: 0;
    display: flex;
    justify-content: center;
}
.contact-list a{
    padding: 15px;
    display: inline-block;
}

